--- a/WalkieTalkie/WalkieTalkieChat.html
+++ b/WalkieTalkie/WalkieTalkieChat.html
@@ -37,6 +37,9 @@
 							<div class="col-sm-12">
 								User 1 input:
 								<input id="inputUser1" type="text"></input>
+								<button id="btnUser1Join" class="btn btn-primary">
+									Join
+								</button>
 								<button id="btnUser1Talk" class="btn btn-primary">
 									Talk
 								</button>
@@ -50,6 +53,9 @@
 							<div class="col-sm-12">
 								User 2 input:
 								<input id="inputUser2" type="text"></input>
+								<button id="btnUser2Join" class="btn btn-primary">
+									Join
+								</button>
 								<button id="btnUser2Talk" class="btn btn-primary">
 									Talk
 								</button>
@@ -63,6 +69,9 @@
 							<div class="col-sm-12">
 								User 3 input:
 								<input id="inputUser3" type="text"></input>
+								<button id="btnUser3Join" class="btn btn-primary">
+									Join
+								</button>
 								<button id="btnUser3Talk" class="btn btn-primary">
 									Talk
 								</button>
@@ -75,11 +84,6 @@
 						<div class="row form-group">
 							<div class="col-sm-12">
 								<h3><span id="spanInfo" class="label label-default"></span></h3>
-								<!-- <h3><span class="label label-primary">Primary Label</span></h3>
-								<h3><span class="label label-success">Success Label</span></h3>
-								<h3><span class="label label-info">Info Label</span></h3>
-								<h3><span class="label label-warning">Warning Label</span></h3>
-								<h3><span class="label label-danger">Danger Label</span></h3> -->
 							</div>
 						</div>
 
