Created a simplified version of the WalkieTalkie using Javascript closures only.

--- a/WalkieTalkie/WalkieTalkieChat.html
+++ b/WalkieTalkie/WalkieTalkieChat.html
@@ -98,6 +98,7 @@
 	</div>
 	<script src="walkietalkie.js"></script>
 	<script src="WalkieTalkieChat.js"></script>
+	<!-- <script src="walkietalkie_dl.js"></script> -->
 </body>
 
 </html>
